src/assets/landing-1.css
body {
    max-width: 100vw;
    overflow-x: hidden;
    margin: 0;
    padding: 0;
}

.landing-wrapper {
    /* landing */

    width: 100%;
    height: 100vh;

    background: #F9F8F8;
}

@media all and (max-width: 1000px) {
    .landing-wrapper {
        height: auto;
        min-height: 100vh;
    }
}

#gradient-canvas {
    position: absolute;

    width: 100%;
    height: 58vh;
    clip-path: polygon(0 0, 100% 0, 100% 0%, 0% 100%);
    margin: 0;
    /* background: linear-gradient(92.43deg, #14B5EB 18.51%, #D226E1 51.06%); */
    /* transform: rotate(-17.5deg); */

    --gradient-color-1: #14b5eb;
    --gradient-color-2: #d226e1;
    --gradient-color-3: #9141ac;
    --gradient-color-4: #b9beff;
}

.info-wrapper {
    /* Info-Wrapper */

    /* Auto layout */
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 0px;
    gap: 25px;
    isolation: isolate;

    position: relative;
    max-width: 40vw;
}

.top-info-align-wrapper {
    position: relative;
    top: 0px;
    max-width: 100vw;
    min-width: 80vw;
    padding-top: 25vh;

    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: row;

    padding-left: 10vw;

    padding-right: 10vw;
}

@media all and (max-width: 600px) {
    .top-info-align-wrapper {
        flex-direction: column;
    }

    .info-wrapper {
        max-width: 100vw;
        left: auto;
        position: relative;
    }

    .landing-wrapper {
        min-height: auto;
    }
}

.gradient-text {
    /* A World-class Curriculum for the Next Generation of Leaders */

    font-family: 'Ubuntu';
    font-style: normal;
    font-weight: 700;
    /* font-size: 76px; */
    font-size: clamp(40px, 4vw + 0.5rem, 80px);

    margin: 0px;

    background: linear-gradient(114.71deg, rgba(0, 0, 0, 0.52) 18.07%, rgba(0, 0, 0, 0.52) 18.08%, rgba(0, 0, 0, 0.8) 63.21%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
    text-fill-color: transparent;


    /* Inside auto layout */
    flex: none;
    order: 0;
    flex-grow: 1;
    z-index: 0;
}

.gradient-about-text {
    /* The IB Diploma Programme molds leaders through rigorous academics, critical thinking, and social responsibility, preparing students for a connected world with confidence and empathy. */

    max-width: 506px;

    font-family: 'Ubuntu';
    font-style: normal;
    font-weight: 500;
    font-size: 18px;
    line-height: 21px;

    margin: 0px;

    color: #5F5F5F;

    /* Inside auto layout */
    flex: none;
    order: 2;
    flex-grow: 0;
    z-index: 2;
}

